<resources>

    <string name="app_name">AndroidAcademy</string>

    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="sample_movie_title">Avengers: End Game</string>

    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_content">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>

    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>

    <string name="pg_text">13+</string>
    <string name="reviews_text">125 REVIEWS</string>
    <string name="back">Back</string>
    <string name="movies_list">Movies list</string>
    <string name="sample_movie_duration">137 MIN</string>

    <plurals name="reviews">
        <item quantity="one">%d REVIEW</item>
        <item quantity="other">%d REVIEWS</item>
    </plurals>

    <string name="minutes">%d MIN</string>

</resources>
